--- a/pocketdoctormobile.html
+++ b/pocketdoctormobile.html
@@ -580,6 +580,7 @@ var colorPill=function(color_text){
 
 
 <!--doesn't break it-->
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 
 <script type="text/javascript" src="bootpanels.js"></script>
 </body>
